--- a/assets/style-sheet/style.css
+++ b/assets/style-sheet/style.css
@@ -14,42 +14,67 @@
   font-optical-sizing: auto;
   font-weight: 0;
   font-style: normal;
+
 }  
 
 .anton-regular {
   font-family: "Anton", sans-serif;
   font-weight: 400;
-  font-style: normal;
+  font-size: 100px;
 }  
 
+body {
+  margin: 0;
+  background: rgb(188,231,132);
+  background: linear-gradient(330deg, rgba(188,231,132,1) 0%, rgba(52,138,167,1) 100%);
 
+}
 
 
 .navbar {
-  padding-inline: 2rem;
+  padding-inline: 10rem;
   display: flex;
   justify-content: space-between;
+  align-items: end;
 }
 
 .presentation {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  margin: 0;
+  height: 90vh;
 }
 
 .presentation-container {
-  border: 5px solid gray;
+  /* border: 5px solid gray;
   border-radius: 1rem;
-  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.267);
-  width: 50%;
-  padding: 1rem;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.267); */
+  width: 50vw;
   margin: 1rem;
+  display: flex;
+  align-items: center;
+}
+
+.presentation-text {
+  margin-left: 40%;
+  margin-right: 10%;
+  text-shadow: 5px 5px 5px rgba(135, 134, 134, 0.459);
+  font-size: larger;
 }
 
 
+.image-container img {
+  width: 50vw;
+}
+
+h2 {
+  margin: 0;
+}
 
 
 .projects {
-
+  overflow: hidden;
 }
 
 .project-card {
@@ -59,18 +84,12 @@
   justify-content: space-between;
   border: 5px solid black;
   border-radius: 1rem;
+  width: 70vw;
+  height: 70vh;
 }
 
 
 
-
-
-
-/* Carrousel */
-.container {
-  overflow: hidden;
-  /* Cache les éléments qui dépassent du container */
-}
 /* Définition du carousel */
 .carousel {
   position: relative;
@@ -97,13 +116,13 @@
   /* Ajout d'une animation douce pour la transition entre les diapositives */
 }
 /* Définition de l'affichage de l'image de chaque diapositive */
-.slide img {
+.slide {
   width: 100%;
-  /* Largeur de l'image est de 100% */
   height: 100%;
-  /* Hauteur de l'image est de 100% */
   object-fit: cover;
-  /* Couvre tout l'espace disponible */
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 /* Définition des boutons de contrôle du carousel */
 .carousel-controls {
@@ -111,9 +130,9 @@
   /* Les boutons sont absolument positionnés */
   z-index: 5;
   /* Ils sont placés au-dessus des autres éléments */
-  left: 10%;
+  left: 5%;
   /* La distance à gauche est de 10% */
-  right: 10%;
+  right: 5%;
   /* La distance à droite est de 10% */
   top: 50%;
   /* La distance du haut est de 50% */
@@ -124,10 +143,20 @@
 }
 /* Style des boutons de contrôle */
 .carousel-controls button {
-  padding: 10px;
+  padding: 0px;
+  text-shadow: 5px 5px 15px rgba(0, 0, 0, 0.561);
+  border: none;
   /* Ajout de padding pour un meilleur contrôle */
-  background-color: aquamarine;
+  background-color: rgba(0, 0, 0, 0);
   /* Arrière-plan en aquamarine */
+  font-family: "Roboto Condensed", sans-serif;
+  font-weight: 0;
+  font-size: 100px;
+  text-align: center;
+}
+
+.carousel-controls button:hover {
+  color: rgba(52,138,167,1);
 }
 /* Définition des points de contrôle */
 .carousel-dots {
@@ -139,7 +168,7 @@
   /* La distance à gauche est de 50% */
   right: 50%;
   /* La distance à droite est de 50% */
-  bottom: 10%;
+  bottom: 5%;
   /*La distance du bas est de 10% */
   display: flex;
   /* Affiche les points en ligne */
