--- a/assets/style-sheet/style.css
+++ b/assets/style-sheet/style.css
@@ -23,19 +23,41 @@
   font-size: 100px;
 }  
 
+/* Global setings */
 body {
   margin: 0;
   background: rgba(52,138,167,1);
   background: linear-gradient(330deg, rgba(188,231,132,1) 0%, rgba(52,138,167,1) 100%);
+}
 
+html {
+  overflow-y: scroll;
+  scroll-behavior: smooth;
 }
 
 
+/* Components  */
 .navbar {
-  padding-inline: 10rem;
+  padding-inline: 10%;
+  width: 80%;
+  height: 50px;
   display: flex;
   justify-content: space-between;
-  align-items: end;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  box-shadow: 0px 0px 100px black;
+  z-index: 10;
+}
+
+.navbar a {
+  text-decoration: none;
+  color: black;
+  margin: 0;
+}
+
+.navbar a:hover {
+  color: rgba(0, 0, 0, 0.515);
 }
 
 .presentation {
