--- a/assets/style-sheet/style.css
+++ b/assets/style-sheet/style.css
@@ -23,6 +23,18 @@
   font-size: 100px;
 }  
 
+.playfair-display-font {
+  font-family: "Playfair Display", serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+}
+
+.title-h2 {
+  font-weight: 900;
+  font-size: 100px;
+}
+
 /* Global setings */
 body {
   margin: 0;
@@ -37,28 +49,6 @@ html {
 
 
 /* Components  */
-.navbar {
-  padding-inline: 10%;
-  width: 80%;
-  height: 50px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  position: fixed;
-  top: 0;
-  box-shadow: 0px 0px 100px black;
-  z-index: 10;
-}
-
-.navbar a {
-  text-decoration: none;
-  color: black;
-  margin: 0;
-}
-
-.navbar a:hover {
-  color: rgba(0, 0, 0, 0.515);
-}
 
 .presentation {
   display: flex;
@@ -84,135 +74,45 @@ html {
   text-shadow: 5px 5px 5px rgba(135, 134, 134, 0.459);
   font-size: larger;
 }
-
-
-.image-container img {
+.home-image-container img {
   width: 50vw;
 }
 
-h2 {
-  margin: 0;
-}
 
+
+
+/* projects ----------------------------------------------------------------- */
 
 .projects {
-  overflow: hidden;
-}
-
-.project-card {
-  margin: 1rem;
-  padding: 1rem;
-  display: flex;
-  justify-content: space-between;
-  border: 5px solid black;
-  border-radius: 1rem;
-  width: 70vw;
-  height: 70vh;
-}
-
-
-
-/* Définition du carousel */
-.carousel {
-  position: relative;
-  /* Le carousel est positionné relativement à son parent */
-}
-/* Définition de l'élément contenant les diapositives */
-.carousel-inner {
-  display: flex;
-  /* Affiche les éléments en ligne */
-  overflow: hidden;
-  /* Cache les éléments qui dépassent */
-  height: 100vh;
-  /* Hauteur égale à 100% de la hauteur de la vue */
-  flex-wrap: nowrap;
-  /* Empêche les éléments de se placer sur plusieurs lignes */
-}
-/* Définition des diapositives */
-.slide {
-  flex: 0 0 100%;
-  /* Largeur de chaque diapositive est de 100% */
-  height: 100%;
-  /* Hauteur de chaque diapositive est de 100% */
-  transition: .5s ease-in-out;
-  /* Ajout d'une animation douce pour la transition entre les diapositives */
-}
-/* Définition de l'affichage de l'image de chaque diapositive */
-.slide {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-/* Définition des boutons de contrôle du carousel */
-.carousel-controls {
-  position: absolute;
-  /* Les boutons sont absolument positionnés */
-  z-index: 5;
-  /* Ils sont placés au-dessus des autres éléments */
-  left: 5%;
-  /* La distance à gauche est de 10% */
-  right: 5%;
-  /* La distance à droite est de 10% */
-  top: 50%;
-  /* La distance du haut est de 50% */
-  display: flex;
-  /* Affiche les boutons en ligne */
-  justify-content: space-between;
-  /* Espacement égal entre les boutons */
-}
-/* Style des boutons de contrôle */
-.carousel-controls button {
-  padding: 0px;
-  text-shadow: 5px 5px 15px rgba(0, 0, 0, 0.561);
-  border: none;
-  /* Ajout de padding pour un meilleur contrôle */
-  background-color: rgba(0, 0, 0, 0);
-  /* Arrière-plan en aquamarine */
-  font-family: "Roboto Condensed", sans-serif;
-  font-weight: 0;
-  font-size: 100px;
+  padding-top: 50px;
   text-align: center;
 }
 
-.carousel-controls button:hover {
-  color: rgba(52,138,167,1);
+.grid {
+  margin: 50px;
+  display: grid;    
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); 
+  gap: 20px;
 }
-/* Définition des points de contrôle */
-.carousel-dots {
-  position: absolute;
-  /* Les points sont absolument positionnés */
-  z-index: 5;
-  /* Ils sont placés au-dessus des autres éléments */
-  left: 50%;
-  /* La distance à gauche est de 50% */
-  right: 50%;
-  /* La distance à droite est de 50% */
-  bottom: 5%;
-  /*La distance du bas est de 10% */
+
+.project-card {
+  border-radius: 10px;
+  background-size: cover;
+  height: 200px;
+  text-decoration: none;
+  color: white;
+  font-size: 30px;
+}
+
+.blur {
+  text-align: center;
   display: flex;
-  /* Affiche les points en ligne */
+  align-items: center;
   justify-content: center;
-  /* Centrage des points */
-}
-/* Style des points de contrôle */
-.carousel-dots .dot {
-  border-radius: 50%;
-  /* Les points sont en forme de cercle */
-  margin: 5px;
-  /* Ajout d'un margin pour un meilleur contrôle */
-  cursor: pointer;
-  /* Curseur en forme de main pour un meilleur contrôle */
-}
-/* Styles pour les points de navigation du carrousel */
-.carousel-dots .active {
-  /* Border de 10px pour le point actif */
-  border: 10px solid #761530 !important;
-  /* !important permet de surcharger les autres styles éventuels */
-}
-.carousel-dots .inactive {
-  /* Border de 10px pour les points inactifs */
-  border: 10px solid #2596be;
+  background: rgba(0, 0, 0, 0.436);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  height: 100%;
+  border-radius: 10px;
+  border: 1px solid black;
 }
