--- a/assets/style-sheet/project-atout-du-dirigeant.css
+++ b/assets/style-sheet/project-atout-du-dirigeant.css
@@ -1,6 +1,7 @@
 body {
-  background-image: url('../images/RH1.jpg');
+  background-image: url('../images/RH2.jpeg');
   background-size: cover;
+  background-position: center;
   color: black;
   margin: 0;
 }
@@ -54,6 +55,7 @@ body {
   .image-container img {
     width: 90vw;
     margin-top: 20px;
+    margin-bottom: 50px;
   }
 
   .project-card-content {
