--- a/assets/style-sheet/style.css
+++ b/assets/style-sheet/style.css
@@ -50,6 +50,9 @@ body {
   scroll-behavior: smooth;
 } */
 
+i {
+  font-size: larger;
+}
 
 /* Components  */
 
@@ -91,17 +94,30 @@ body {
   text-align: center;
 }
 
+.grid-container {
+  /* justify-content: center; */
+  position: relative;
+  height: 300px;
+  width: 300px;
+}
+
 .grid {
   margin: 50px;
   display: grid;    
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); 
+  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr)); 
   gap: 20px;
+  justify-items: center;
+  /* justify-content: center; */
+  /* align-content: center; */
+  /* grid-auto-flow: column; */
+
 }
 
 .project-card {
   border-radius: 10px;
   background-size: cover;
   height: 200px;
+  width: 300px;
   text-decoration: none;
   color: black;
   font-size: 30px;
@@ -132,31 +148,104 @@ body {
 
 /* CV -------------------------------------------------------------------------*/
 
-.cv {
+/* cv style 2 */
+.cv-card-container {
+  position: relative;
+  height: 300px;
+  width: 300px;
+}
+
+.cv-card-container:hover .cv-card {
+  transform: rotateY(180deg);
+}
+
+.cv-card {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  transition: all 0.3s ease;
+  transform-style: preserve-3d;
+}
+
+.card-front {
+  border-radius: 10px;
+  /* border: 3px solid #c7e2fd; */
+  color: #e7f3ff;
+  font-size: 30px;
+  text-align: center;
+  display: flex;
+  align-items: center; 
+  justify-content: center;
+
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background: #007bff;
+  backface-visibility: hidden;
+}
+
+.card-back {
+  border-radius: 10px;
+  border: 3px solid #007bff;
+  color: #007bff;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  /* grid-auto-flow: column; */
+
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background: #e7f3ff;
+  backface-visibility: hidden;
+  transform: rotateY(-180deg);
+}
+
+.cv-grid-competences {
+  display: grid;    
+  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr)); 
+  gap: 20px;
+  justify-items: center;
+}
+
+.cv-card-content {
+  padding: 10px;
+}
+
+.cv a {
+  display: flex;
+  justify-content: center;
+  text-decoration: none;
+}
+
+
+/* cv style 1 */
+/* .cv {
   padding-top: 50px;
   padding-bottom: 100px;
   padding-inline: 10vw;
-}
+} */
 
-.cv p {
+/* .cv p {
   margin: 0;
-}
+} */
 
-.cv-section {
+/* .cv-section {
   margin-bottom: 30px;
-}
+} */
 
-.cv-section h3 {
+/* .cv-section h3 {
   font-size: 1.5em;
   margin-bottom: 15px;
-  color: #007bff; /* Couleur bleu pour les sous-titres */
-  border-bottom: 2px solid #007bff; /* Ligne de séparation */
+  color: #007bff; Couleur bleu pour les sous-titres 
+  border-bottom: 2px solid #007bff; Ligne de séparation 
   padding-bottom: 5px;
-}
+} */
 
-.cv-item {
-  background: #e7f3ff; /* Couleur de fond légère */
-  border-left: 5px solid #007bff; /* Bordure bleue */
+/* .cv-item {
+  background: #e7f3ff; Couleur de fond légère 
+  border-left: 5px solid #007bff; Bordure bleue 
   border-radius: 4px;
   padding: 10px;
   margin-bottom: 10px;
@@ -172,13 +261,13 @@ body {
   border-left: 5px solid #007bff;
   border-radius: 4px;
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
-}
+} */
 
-.cv a {
+/* .cv a {
   display: flex;
   justify-content: center;
   text-decoration: none;
-}
+} */
 
 /* .cv-grid {
   margin: 20px;
@@ -190,9 +279,6 @@ body {
 
 /* Responsivité sur telephone ------------------------------------------------- */
 @media screen and (max-width: 480px) {
-  p {
-    font-size: 20px;
-  }
 
   .title-h2 {
     font-size: 70px;
@@ -220,8 +306,8 @@ body {
     text-align: center;
   }
 
-  .cv-grid {
+  /* .cv-grid {
     display: grid;    
     grid-template-columns: repeat(auto-fill); 
-  }
+  } */
 }
